// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: RadioGroup should render a disabled radio group 1`] = `
.c5 + .c5 {
  margin-top: 16px;
}

.c4 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 16px;
  padding-top: 8px;
}

.c2 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c14 {
  vertical-align: middle;
}

.c12 {
  padding: 2px 4px;
  position: relative;
  box-sizing: border-box;
  overflow-wrap: break-word;
  display: inline-block;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsla(47,82%,47%,0.3);
}

.c12 .sc-GTWni,
.c12 .c13,
.c12 .sc-Fyfyc {
  margin-right: 4px;
  vertical-align: -2px;
}

.c0 {
  position: relative;
  border: 0;
  margin: 0;
  padding: 0;
}

.c0 legend {
  box-sizing: border-box;
  border-bottom: 1px solid currentcolor;
  padding-left: 16px;
  width: 100%;
  float: left;
  color: hsl(0,0%,70%);
}

.c0 legend + * {
  clear: both;
}

.c0 .sc-iGctRS {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .c11 {
  margin-top: 4px;
}

.c9 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c10 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  border: 2px solid hsl(0,0%,90%);
}

.c10::after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c8 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: cursor;
}

.c8 input:checked ~ span {
  background-color: transparent;
}

.c8 input:checked ~ span::after {
  display: block;
}

.c8 input:focus ~ span {
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c6 + .c6 {
  margin-top: 8px;
}

.c7 .c1 {
  cursor: not-allowed;
  padding-left: 8px;
  color: hsl(0,0%,70%);
}

.c3 {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: 8px;
}

.c3 .sc-iGctRS {
  position: relative;
  right: 0;
  bottom: 0;
  padding-left: 0;
}

@media screen and (min-width:1024px) {
  .c2 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c12 {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <fieldset
    aria-describedby="rg-status"
    class="c0"
    disabled=""
    id="rg"
    name="cities"
    role="radiogroup"
  >
    <legend
      class="c1 c2"
      id="rg-label"
    >
      <span
        class="c3"
      >
        Captitol
      </span>
    </legend>
    <div
      class="c4"
    >
      <div
        class="c5 c6 c7"
      >
        <label
          class="c8"
          for="earth"
        >
          <input
            class="c9"
            disabled=""
            id="earth"
            name="cities"
            type="radio"
            value="james"
          />
          <span
            aria-hidden="true"
            class="c10"
            disabled=""
          />
        </label>
        <label
          class="c1 c2"
          for="earth"
        >
          Agothera
        </label>
      </div>
      <div
        class="c5 c6 c7"
      >
        <label
          class="c8"
          for="life"
        >
          <input
            class="c9"
            disabled=""
            id="life"
            name="cities"
            type="radio"
            value="persephone"
          />
          <span
            aria-hidden="true"
            class="c10"
            disabled=""
          />
        </label>
        <label
          class="c1 c2"
          for="life"
        >
          Idylliac
        </label>
      </div>
      <div
        class="c5 c6 c7"
      >
        <label
          class="c8"
          for="air"
        >
          <input
            checked=""
            class="c9"
            disabled=""
            id="air"
            name="cities"
            type="radio"
            value="stratos"
          />
          <span
            aria-hidden="true"
            class="c10"
            disabled=""
          />
        </label>
        <label
          class="c1 c2"
          for="air"
        >
          Thryhring
        </label>
      </div>
      <div
        class="c5 c6 c7"
      >
        <label
          class="c8"
          for="fire"
        >
          <input
            class="c9"
            disabled=""
            id="fire"
            name="cities"
            type="radio"
            value="pyro"
          />
          <span
            aria-hidden="true"
            class="c10"
            disabled=""
          />
        </label>
        <label
          class="c1 c2"
          for="fire"
        >
          Helios
        </label>
      </div>
      <div
        class="c5 c6 c7"
      >
        <label
          class="c8"
          for="death"
        >
          <input
            class="c9"
            disabled=""
            id="death"
            name="cities"
            type="radio"
            value="charnel"
          />
          <span
            aria-hidden="true"
            class="c10"
            disabled=""
          />
        </label>
        <label
          class="c1 c2"
          for="death"
        >
          Dys
        </label>
      </div>
    </div>
    <div>
      <div
        class="c11 c12"
        id="rg-status"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="c13 c14"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.39339828,12.7071068 C1.00287399,12.3165825 1.00287399,11.6834175 1.39339828,11.2928932 L11.2928932,1.39339828 C11.6834175,1.00287399 12.3165825,1.00287399 12.7071068,1.39339828 L22.6066017,11.2928932 C22.997126,11.6834175 22.997126,12.3165825 22.6066017,12.7071068 L12.7071068,22.6066017 C12.3165825,22.997126 11.6834175,22.997126 11.2928932,22.6066017 L1.39339828,12.7071068 Z M3.51471863,12 L12,20.4852814 L20.4852814,12 L12,3.51471863 L3.51471863,12 Z M12,16 C11.4477153,16 11,15.5522847 11,15 C11,14.4477153 11.4477153,14 12,14 C12.5522847,14 13,14.4477153 13,15 C13,15.5522847 12.5522847,16 12,16 Z M13,12 C13,12.5522847 12.5522847,13 12,13 C11.4477153,13 11,12.5522847 11,12 L11,9 C11,8.44771525 11.4477153,8 12,8 C12.5522847,8 13,8.44771525 13,9 L13,12 Z"
          />
        </svg>
        <span>
          Cannot travel right now
        </span>
      </div>
    </div>
  </fieldset>
</div>
`;

exports[`component: RadioGroup should render a radio group 1`] = `
.c8 + .c8 {
  margin-top: 16px;
}

.c7 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 16px;
  padding-top: 8px;
}

.c2 {
  font-size: 18px;
  line-height: 1.5;
  font-weight: 600;
  color: hsl(200,10%,20%);
}

.c5 {
  vertical-align: middle;
}

.c6 {
  outline: none;
  color: hsl(200,10%,20%);
}

.c6:hover {
  color: hsl(200,96%,35%);
}

.c0 {
  position: relative;
  border: 0;
  margin: 0;
  padding: 0;
}

.c0 legend {
  box-sizing: border-box;
  border-bottom: 1px solid currentcolor;
  padding-left: 16px;
  width: 100%;
  float: left;
  color: currentcolor;
}

.c0 legend + * {
  clear: both;
}

.c0 .c4 {
  position: absolute;
  right: 8px;
  top: 2px;
  font-size: 16px;
}

.c0 .sc-gkdzZj {
  margin-top: 4px;
}

.c12 {
  opacity: 0;
  height: 0;
  width: 0;
  margin: 0;
  position: absolute;
}

.c13 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: transparent;
  border: 2px solid hsl(200,96%,11%);
}

.c13::after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(200,96%,35%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c16 {
  display: inline-block;
  box-sizing: border-box;
  width: 16px;
  height: 16px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  border: 2px solid hsl(0,0%,90%);
}

.c16::after {
  position: absolute;
  content: '';
  display: none;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: hsl(0,0%,90%);
  margin: 2px 2px;
  box-sizing: border-box;
}

.c11 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: pointer;
}

.c11 input:checked ~ span {
  border-color: hsl(200,96%,35%);
  background-color: transparent;
}

.c11 input:checked ~ span::after {
  display: block;
}

.c11 input:focus ~ span {
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c15 {
  position: relative;
  display: inline-block;
  vertical-align: -1px;
  line-height: 16px;
  width: 16px;
  height: 16px;
  cursor: cursor;
}

.c15 input:checked ~ span {
  background-color: transparent;
}

.c15 input:checked ~ span::after {
  display: block;
}

.c15 input:focus ~ span {
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
}

.c9 + .c9 {
  margin-top: 8px;
}

.c10 .c1 {
  cursor: pointer;
  padding-left: 8px;
}

.c9 + .c9 {
  margin-top: 8px;
}

.c14 .c1 {
  cursor: not-allowed;
  padding-left: 8px;
  color: hsl(0,0%,70%);
}

.c3 {
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-right: 8px;
}

.c3 .c4 {
  position: relative;
  right: 0;
  bottom: 0;
  padding-left: 0;
}

@media screen and (min-width:1024px) {
  .c2 {
    font-size: 18px;
    line-height: 1.5;
  }
}

<div>
  <fieldset
    aria-describedby="rg-tip"
    class="c0"
    id="rg"
    name="places"
    role="radiogroup"
  >
    <legend
      class="c1 c2"
      id="rg-label"
    >
      <span
        class="c3"
      >
        Realm
        <span
          id="rg-tip"
          role="tooltip"
          style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;"
        >
          Select your preferred realm
        </span>
        <span
          class="c4 "
          data-reach-tooltip-trigger=""
          data-state="tooltip-hidden"
        >
          <svg
            class="c5 c6"
            fill="currentcolor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M22,12 C22,6.47714622 17.5223159,2 12,2 C6.47523326,2 2,6.47577095 2,12 C2,17.524229 6.47523326,22 12,22 C17.5223159,22 22,17.5228538 22,12 Z M24,12 C24,18.6274771 18.6268316,24 12,24 C5.37060996,24 0,18.6287448 0,12 C0,5.37125524 5.37060996,0 12,0 C18.6268316,0 24,5.37252293 24,12 Z M11.057,15.6442233 L11.057,12.5 L9.27493729,12.5 C8.72265254,12.5 8.27493729,12.0522847 8.27493729,11.5 C8.27493729,10.9477153 8.72265254,10.5 9.27493729,10.5 L12.057,10.5 C12.6092847,10.5 13.057,10.9477153 13.057,11.5 L13.057,15.6442233 L15.0505322,15.6442233 C15.602817,15.6442233 16.0505322,16.0919386 16.0505322,16.6442233 C16.0505322,17.1965081 15.602817,17.6442233 15.0505322,17.6442233 L9,17.6442233 C8.44771525,17.6442233 8,17.1965081 8,16.6442233 C8,16.0919386 8.44771525,15.6442233 9,15.6442233 L11.057,15.6442233 Z M11.5,9 C10.6715729,9 10,8.32842712 10,7.5 C10,6.67157288 10.6715729,6 11.5,6 C12.3284271,6 13,6.67157288 13,7.5 C13,8.32842712 12.3284271,9 11.5,9 Z"
            />
          </svg>
        </span>
      </span>
    </legend>
    <div
      class="c7"
    >
      <div
        class="c8 c9 c10"
      >
        <label
          class="c11"
          for="earth"
        >
          <input
            class="c12"
            id="earth"
            name="places"
            required=""
            type="radio"
            value="james"
          />
          <span
            aria-hidden="true"
            class="c13"
          />
        </label>
        <label
          class="c1 c2"
          for="earth"
        >
          Glebe
        </label>
      </div>
      <div
        class="c8 c9 c10"
      >
        <label
          class="c11"
          for="life"
        >
          <input
            checked=""
            class="c12"
            id="life"
            name="places"
            required=""
            type="radio"
            value="persephone"
          />
          <span
            aria-hidden="true"
            class="c13"
          />
        </label>
        <label
          class="c1 c2"
          for="life"
        >
          Elysium
        </label>
      </div>
      <div
        class="c8 c9 c10"
      >
        <label
          class="c11"
          for="air"
        >
          <input
            class="c12"
            id="air"
            name="places"
            required=""
            type="radio"
            value="stratos"
          />
          <span
            aria-hidden="true"
            class="c13"
          />
        </label>
        <label
          class="c1 c2"
          for="air"
        >
          Empyrea
        </label>
      </div>
      <div
        class="c8 c9 c10"
      >
        <label
          class="c11"
          for="fire"
        >
          <input
            class="c12"
            id="fire"
            name="places"
            required=""
            type="radio"
            value="pyro"
          />
          <span
            aria-hidden="true"
            class="c13"
          />
        </label>
        <label
          class="c1 c2"
          for="fire"
        >
          Pyroborea
        </label>
      </div>
      <div
        class="c8 c9 c14"
      >
        <label
          class="c15"
          for="death"
        >
          <input
            class="c12"
            disabled=""
            id="death"
            name="places"
            required=""
            type="radio"
            value="charnel"
          />
          <span
            aria-hidden="true"
            class="c16"
            disabled=""
          />
        </label>
        <label
          class="c1 c2"
          for="death"
        >
          Stygia
        </label>
      </div>
    </div>
  </fieldset>
</div>
`;
